--- a/nest-crud-api/package.json
+++ b/nest-crud-api/package.json
@@ -47,7 +47,9 @@
     "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.3",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0"
   },
   "jest": {
     "moduleFileExtensions": [
