--- a/nest-crud-api/package.json
+++ b/nest-crud-api/package.json
@@ -40,13 +40,16 @@
     "rxjs": "^7.8.1",
     "sqlite3": "^5.1.6",
     "swagger-ui-express": "^5.0.0",
-    "typeorm": "^0.3.17"
+    "typeorm": "^0.3.17",
+    "cookie-parser": "^1.4.6"
+
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
     "@types/bcrypt": "^5.0.0",
+    "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
