--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nest-crud-api",
+  "name": "bookmark-api",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -42,7 +42,6 @@
     "swagger-ui-express": "^5.0.0",
     "typeorm": "^0.3.17",
     "cookie-parser": "^1.4.6"
-
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
