--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.1.0",
     "@nestjs/passport": "^10.0.0",
@@ -33,6 +34,7 @@
     "@nestjs/typeorm": "^10.0.0",
     "@types/passport-local": "^1.0.35",
     "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.6",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
@@ -40,8 +42,7 @@
     "rxjs": "^7.8.1",
     "sqlite3": "^5.1.6",
     "swagger-ui-express": "^5.0.0",
-    "typeorm": "^0.3.17",
-    "cookie-parser": "^1.4.6"
+    "typeorm": "^0.3.17"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
